--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Karaoke VR",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server-new.js"
   },
   "dependencies": {
     "networked-aframe": "^0.7.1"
