--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server-new.js"
   },
   "dependencies": {
-    "networked-aframe": "^0.7.1"
+    "networked-aframe": "^0.7.1",
+    "socket.io": "^3.0.1"
   },
   "engines": {
     "node": "8.10.0"
