--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "socket.io": "^3.0.1"
   },
   "engines": {
-    "node": "8.10.0"
+    "node": "^12.0.0",
+    "yarn": "^1.21.1"
   },
   "repository": {
     "url": "https://glitch.com/#!/project/karaoke-nite"
