--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@karaokenite/client": "^0.0.0",
     "express": "^4.17.1",
+    "lodash": "4.17.21",
     "networked-aframe": "^0.7.1",
     "socket.io": "^3.1.2"
   },
