--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server-new.js"
   },
   "dependencies": {
-    "networked-aframe": "^0.7.1",
+    "express": "^4.17.0",
     "httpolyglot": "^0.1.2",
     "simple-peer": "^9.7.0",
     "socket.io": "^4.1.2"
