--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,16 +8,18 @@
   "main": "dist/index",
   "scripts": {
     "dev": "next dev",
-    "build": "yarn babel src/index.js --out-dir dist && next build",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@firebase/firestore": "^2.3.1",
+    "firebase": "^8.6.2",
+    "lodash": "^4.17.20",
     "next": "9.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "lodash": "^4.17.20",
     "sass": "^1.26.10",
-    "socket.io-client": "^3.1.2"
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "url-loader": "^4.1.0"
