--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@karaokenite/client": "^0.0.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "express": "^4.17.1",
     "lodash": "4.17.21",
     "networked-aframe": "^0.7.1",
-    "socket.io": "^3.1.2"
+    "redux": "^4.1.0",
+    "socket.io": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "^12.0.0",
