--- a/package.json
+++ b/package.json
@@ -5,15 +5,10 @@
   "main": "server.js",
   "private": true,
   "scripts": {
-    "build": "lerna run build",
-    "start": "yarn build && yarn workspace @karaokenite/server start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "yarn && node ./next-server"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
-  "dependencies": {},
   "engines": {
     "node": "^12.0.0",
     "yarn": "^1.21.1"
@@ -27,12 +22,30 @@
     "glitch",
     "express"
   ],
+  "dependencies": {
+    "@firebase/firestore": "^2.3.1",
+    "@reduxjs/toolkit": "^1.6.0",
+    "express": "^4.17.1",
+    "firebase": "^8.6.2",
+    "lodash": "^4.17.20",
+    "next": "9.5.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.26.10",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
+    "uuid": "^8.3.2"
+  },
   "devDependencies": {
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "lerna": "^4.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "url-loader": "^4.1.0"
+  },
+  "directories": {
+    "src": "src",
+    "test": "__tests__"
   }
 }
