--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "yarn && node ./next-server"
+    "start": "nodemon src/server --ignore dist/ --exec babel-node --presets '@babel/preset-env'"
   },
   "engines": {
     "node": "^12.0.0",
@@ -29,6 +29,7 @@
     "firebase": "^8.6.2",
     "lodash": "^4.17.20",
     "next": "9.5.2",
+    "nodemon": "^2.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.26.10",
@@ -37,6 +38,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
